Prevent Hero text overflow on bigger screens

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -8,6 +8,7 @@
   position: absolute;
   top: 0;
   z-index: 0;
+  max-height: 1024px;
 }
 
 .hero picture {
